fix page button on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -315,3 +315,6 @@
 		{
 			padding: 0.75em 1.25em 0.75em 1.25em;
 		}
+	#pages{
+		float:none !important;
+	}
